--- a/PDF2News/frontend/package.json
+++ b/PDF2News/frontend/package.json
@@ -11,33 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@ngrx/store": "^8.5.1",
-    "apollo-angular": "^1.8.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "apollo-angular-link-http": "^1.9.0",
-    "apollo-link": "^1.2.11",
+    "@angular/animations": "~8.0.1",
+    "@angular/cdk": "^8.1.3",
+    "@angular/common": "~8.0.1",
+    "@angular/compiler": "~8.0.1",
+    "@angular/core": "~8.0.1",
+    "@angular/forms": "~8.0.1",
+    "@angular/material": "^8.1.3",
+    "@angular/platform-browser": "~8.0.1",
+    "@angular/platform-browser-dynamic": "~8.0.1",
+    "@angular/router": "~8.0.1",
+    "@ngrx/store": "^8.2.0",
+    "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.8.0",
+    "apollo-cache-inmemory": "^1.3.2",
     "apollo-client": "^2.6.0",
-    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-link": "^1.2.11",
+    "cors": "^2.8.5",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.0",
-    "graphql": "^14.5.0"
+    "graphql-tools": "^4.0.6",
+    "graphql-upload": "^8.1.0",
+    "hammerjs": "^2.0.8",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "~8.0.1",
+    "@angular/language-service": "~8.0.1",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -52,6 +57,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.4.3"
   }
 }
