--- a/PDF2News/backend/package.json
+++ b/PDF2News/backend/package.json
@@ -7,24 +7,35 @@
     "start": "nodemon --exec npm run babel-node -- ./bin/www"
   },
   "dependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/node": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/register": "^7.5.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-latest": "^6.24.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8",
-    "graphql-tools": "^4.0.6",
-    "graphql-upload": "^8.1.0",
+    "graphql": "^14.4.2",
+    "graphql-tools": "^4.0.5",
+    "graphql-upload": "^8.0.7",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "pg": "^7.12.1",
+    "npm-run-all": "^4.1.5",
+    "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "rimraf": "^3.0.0",
+    "sequelize": "^5.15.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
   }
 }
