--- a/PDF2News/backend/package.json
+++ b/PDF2News/backend/package.json
@@ -11,12 +11,13 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-latest": "^6.24.1",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "express-graphql": "^0.9.0",
+    "g": "^2.0.1",
     "graphql": "^14.4.2",
     "graphql-tools": "^4.0.5",
     "graphql-upload": "^8.0.7",
@@ -27,7 +28,8 @@
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "rimraf": "^3.0.0",
-    "sequelize": "^5.15.1"
+    "sequelize": "^5.15.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
