--- a/PDF2News/frontend/package.json
+++ b/PDF2News/frontend/package.json
@@ -29,11 +29,13 @@
     "apollo-link": "^1.2.11",
     "cors": "^2.8.5",
     "express-graphql": "^0.9.0",
+    "g": "^2.0.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.6",
     "graphql-upload": "^8.1.0",
     "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
