--- a/PDF2News/backend/package.json
+++ b/PDF2News/backend/package.json
@@ -27,6 +27,7 @@
     "npm-run-all": "^4.1.5",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
+    "python-shell": "^1.0.8",
     "rimraf": "^3.0.0",
     "sequelize": "^5.21.2",
     "uuid": "^3.3.3"
